fixes weird button on mobile https://github.com/JustOpine/JustOpine/issues/132 + mobile responsive css

--- a/public/css/sass/components/_buttons.scss
+++ b/public/css/sass/components/_buttons.scss
@@ -4,6 +4,7 @@ button, input[type="submit"] {
     font-size: 14px;
     letter-spacing: 2px;
     padding: 8px 17px;
+    -webkit-appearance: none;
 }
 
 button:hover, input[type="submit"]:hover {
